[gd_scene load_steps=17 format=2]

[ext_resource path="res://script/Door_To_next_Level.gd" type="Script" id=1]
[ext_resource path="res://imgesFonts/13_door.png" type="Texture" id=2]
[ext_resource path="res://sons/son_porta_open.wav" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 252, 0, 63, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 126, 0, 63, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 63, 0, 63, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 189, 0, 63, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 63, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 63, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 189, 0, 63, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 63, 0, 63, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 126, 0, 63, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 252, 0, 63, 64 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": false,
"name": "close",
"speed": 8.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "open",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 10.6667, 9.23973 )

[sub_resource type="CircleShape2D" id=13]
radius = 96.0

[node name="Door_To_next_Level" type="Node2D"]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 11 )
animation = "open"
frame = 4

[node name="Entrou" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entrou"]
position = Vector2( -10.6667, 21.3333 )
shape = SubResource( 12 )

[node name="open_close" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="open_close"]
position = Vector2( -10.6667, 0 )
shape = SubResource( 13 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[connection signal="body_entered" from="Entrou" to="." method="to_next_level"]
[connection signal="body_entered" from="open_close" to="." method="_on_open_close_body_entered"]
[connection signal="body_exited" from="open_close" to="." method="_on_open_close_body_exited"]
